# my-docs

./: README.md  doc-2.md  doc.md  v1.md
notalink-m1-rga/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notalink-m1-rga/ai/: contracts.py  repro.py  trace.py
notalink-m1-rga/ai/engines/: base.py  dummy.py
notalink-m1-rga/ai/prompts/: link_suggestions.md  summarization.md
notalink-m1-rga/app/: __init__.py  routes.py
notalink-m1-rga/app/static/css/: styles.css
notalink-m1-rga/app/static/js/: add_note.js
notalink-m1-rga/app/templates/: add_note.html  base.html  home.html  view_note.html
notalink-m1-rga/mcp_server/: server.py
notalink-m1-rga/mcp_server/tools/: ai.py  notes.py
notalink-m1-rga/notalink/: ids.py  settings.py  storage.py
notalink-m1-rga/notalink/contracts/: graph.py  index.py  links.py  notes.py  quip.py
notalink-m1-rga/tests/: test_ai_smoke.py  test_env_smoke.py  test_storage_smoke.py
vitepress-project/: poc-2.md  poc-3.md  poc-4.md  poc-5.md  poc-6.md  poc.md
vitepress-project/docs/: context.md  draft.md  table.md  test.md
vitepress-project/docs/.vitepress/: config.ts
